tidy up comments

--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
     />
   </head>
   <body>
-    Synchronous VS Asynchronous
+    <h1 class="text-success text-center">Asynchronous JavaScript (by Taka)</h1>
+    <br />
     <div class="text-center">
       <button class="btn btn-primary" onclick="makeMeDessert()">
-        Plz make me a dessert with then/catch
+        Plz make me a dessert With Then/Catch
       </button>
     </div>
     <br />
